2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* RssPressReview.php:  Fix z-index so the hovers will overlap the expanded news.
	* login/index.php:  Reorganise code to make it more legible and comment what it does.  
	Emphasise error messages and put them right above where they clicked so users can actually see them.  
	* Security.php:  Remove deprecated login code
	* Authenticator.php: Change calling convention for better encapsulation
	* New feature:  Support multiple simultaneous logins if enabled in network configuration
	* New feature (in testing): Splash-only node support
	  
2005-09-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* include/common.php:  Add code to undo the effect of magic_quote if enabled in the server config.  It is still strongly recommended to disable magic_quote
	* Node.php:  Add UI for splash only node and custom portal
	* Update schema
	
2005-09-04 Francois Proulx <francois.proulx@gmail.com>
	* Removed update.php script ( should not have been in CVS )
	* Moved authenticator require in Network getAuthenticator()
	
2005-09-03 Philippe April  <philippe@ilesansfil.org>
	* Schema change: Added last_paged column to nodes table
	* Replaced HOTSPOT_NETWORK_NAME with hotspot_network_name in all templates
	* s/Networt/Network/
	* Fixed signing up and validation, typos

2005-09-01 Benoit Grégoire  <bock@step.polymtl.ca>
	WARNING:  DO NOT use the CVS auth server in production until further notice.  
	Massive internal changes are underway.  
	Use the release tagged 1.0m1 in production.
	* Network abstraction mostly complete, including UI.  
	All that is missing is new network creation, network stakeholder UI and testing.  
	* Cleanup the config file of all the now unneeded constants. 
	 Note that the install script is currently broken.  
	There can now be multiple networks on the server.  
	The install script will have to make sure that there is at least one, with one super-admin

2005-08-31 Francois Proulx <francois.proulx@gmail.com>