@@ -1,4 +1,7 @@
 2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
+	* login/index.php:  Fix getSplashOnlyUser() method call.
+
+2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
 	* RssPressReview.php:  Fix z-index so the hovers will overlap the expanded news.
 	* login/index.php:  Reorganise code to make it more legible and comment what it does.  
 	Emphasise error messages and put them right above where they clicked so users can actually see them.  
